--- a/F22/Advanced-Interface-using-CSS-COMP2081/Assignment1/stylesheets/index.css
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/Assignment1/stylesheets/index.css
@@ -1,183 +1,264 @@
-    html: {}
-    
-    body {
-        height: 100vh;
-        width: 100vw;
-        display: grid;
-        grid-template-columns: 100%;
-        grid-template-rows: 15% auto 10%;
-        grid-template-areas: "header""main""footer";
-        background-color: #a1cd9a;
-        overflow-x: hidden;
-    }
-    /* header css*/
-    
-    header {
-        display: flex;
-        height: 15vh;
-        grid-area: header;
-        background-color: #404946;
-        z-index: 100;
-    }
-    
-    header>section:nth-of-type(1) {
-        width: 7.5vw;
-    }
-    
-    header>section:nth-of-type(2) {
-        width: 57.5vw;
-        display: flex;
-        justify-content: center;
-    }
-    
-    header>section:nth-of-type(3) {
-        width: 35vw;
-    }
-    
-    header>section>a>img {
-        width: auto;
-        height: 100%;
-    }
-    
-    header>section>a>img:hover {
-        scale: 0.9;
-    }
-    
-    header>section>nav {
-        height: 90%;
-        width: 90%;
-        display: flex;
-        align-items: flex-end;
-        justify-content: space-evenly;
-        gap: 2.5%;
-    }
-    
-    .navScrolling {
-        align-items: center;
-    }
-    
-    header>section>nav>a {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 20%;
-        width: 50%;
-        font-size: calc(.75vw + .25vh);
-        background-color: #c3deb5;
-        padding: 10px 10px;
-        border-radius: 25px;
-        text-decoration: none;
-        color: #404946;
-    }
-    
-    header>section>nav>a:hover {
-        background-color: #61797b;
-        color: #c3deb5;
-        scale: 1.1;
-    }
-    /* footer styles */
-    
-    main {
-        column-gap: 1%;
-        row-gap: 1%;
-        margin-top: 1%;
-        grid-area: main;
-        height: 200vh;
-        overflow-y: scroll;
-        overflow-x: hidden;
-        display: grid;
-        grid-template-columns: repeat(7, 1fr);
-        grid-template-rows: 5vh auto;
-        grid-template-areas: ". mainBanner mainBanner mainBanner mainBanner mainBanner rightBanner""leftBanner mainContent1 mainContent1 mainContent1 secondaryContent1 secondaryContent1 rightBanner""leftBanner mainContent1 mainContent1 mainContent1 tertiaryContent1 tertiaryContent2 rightBanner""leftBanner mainContent1 mainContent1 mainContent1 secondaryContent2 secondaryContent2 rightAd1""leftBanner middleSection middleSection middleSection middleSection middleSection middleSection""leftBanner middleSection middleSection middleSection middleSection middleSection middleSection""leftBanner mainContent2 mainContent2 mainContent2  coulmn1 coulmn2 rightAd2""leftBanner mainContent2 mainContent2 mainContent2 coulmn1 coulmn2 rightAd3";
-    }
-    
-    .contentSection {
-        background-color: #61797b;
-        border-radius: 5%;
-    }
-    
-    #mainBanner {
-        grid-area: mainBanner;
-        border-radius: 15px;
-    }
-    
-    #leftBanner {
-        grid-area: leftBanner;
-        border-radius: 15px;
-    }
-    
-    #rightBanner {
-        grid-area: rightBanner;
-    }
-    
-    #mainContent1 {
-        grid-area: mainContent1;
-    }
-    
-    #secondaryContent1 {
-        grid-area: secondaryContent1;
-    }
-    
-    #tertiaryContent1 {
-        grid-area: tertiaryContent1;
-    }
-    
-    #rightAd1 {
-        grid-area: rightAd1;
-    }
-    
-    #rightAd2 {
-        grid-area: rightAd2;
-    }
-    
-    #rightAd3 {
-        grid-area: rightAd3;
-    }
-    
-    #mainContent2 {
-        grid-area: mainContent2;
-    }
-    
-    #secondaryContent2 {
-        grid-area: secondaryContent2;
-    }
-    
-    #tertiaryContent2 {
-        grid-area: tertiaryContent2;
-    }
-    
-    #coulmn1 {
-        grid-area: coulmn1;
-    }
-    
-    #coulmn2 {
-        grid-area: coulmn2;
-    }
-    
-    #middleSection {
-        grid-area: middleSection;
-    }
-    /* footer styles */
-    
-    footer {
-        grid-area: footer;
-        height: 10vh;
-        width: 100vw;
-        background-color: #404946ee;
-        position: fixed;
-        z-index: 100;
-        top: 90%;
-        transform: scaleY(.45) translateY(60%);
-    }
-    
-    .atBottom {
-        position: inherit;
-        z-index: inherit;
-        top: inherit;
-        transform: unset;
-    }
-    
-    .scrolling {
-        position: fixed;
-        transform: scaleY(.6) translateY(-40%);
-    }
+        html: {}
+        
+        body {
+            height: 100vh;
+            width: 100vw;
+            display: grid;
+            grid-template-columns: 100%;
+            grid-template-rows: 15% auto 10%;
+            grid-template-areas: "header""main""footer";
+            background-color: #a1cd9a;
+            overflow-x: hidden;
+        }
+        /* header css*/
+        
+        header {
+            display: flex;
+            height: 15vh;
+            grid-area: header;
+            background-color: #404946;
+            z-index: 100;
+        }
+        
+        header>section:nth-of-type(1) {
+            width: 12.5vw;
+            z-index: 1;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        header>section:nth-of-type(2) {
+            width: 50vw;
+            display: flex;
+            justify-content: center;
+        }
+        
+        header>section:nth-of-type(3) {
+            width: 45vw;
+        }
+        
+        header>section:nth-of-type(4) {
+            display: none;
+        }
+        
+        header>section:nth-of-type(4)>a {
+            text-decoration: none;
+            color: #ccc;
+            width: 33%;
+            height: 33%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        
+        header>section:nth-of-type(4)>a>i {
+            font-size: 40px;
+        }
+        
+        header>section>a>img:hover {
+            scale: 0.9;
+        }
+        
+        header>section:first-of-type>a>img {
+            max-height: 15vh;
+            max-width: 12.5vw;
+        }
+        
+        header>section>nav {
+            height: 90%;
+            width: 90%;
+            display: flex;
+            align-items: flex-end;
+            justify-content: center;
+            flex-direction: row;
+            gap: 2.5%;
+        }
+        
+        #topnav {
+            background-color: red;
+            display: none;
+            flex-direction: column;
+            gap: 5%;
+            z-index: 101;
+            position: fixed;
+            right: 0%;
+            top: 15%;
+            margin-right: 3%;
+            padding: 2%;
+        }
+        
+        .navScrolling {
+            align-items: center;
+            scale: 1;
+            top: 9% !important;
+            transform: scale(1) translateX(-10%);
+        }
+        
+        .scrolling {
+            top: inherit;
+            position: fixed;
+            transform: scaleY(.6) translateY(-40%);
+        }
+        
+        header>section>nav>a {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 20%;
+            width: 50%;
+            font-size: calc(.75vw + .25vh);
+            background-color: #c3deb5;
+            padding: 10px 10px;
+            border-radius: 25px;
+            text-decoration: none;
+            color: #404946;
+        }
+        
+        header>section>nav>a:hover {
+            background-color: #61797b;
+            color: #c3deb5;
+            scale: 1.1;
+        }
+        /* footer styles */
+        
+        main {
+            min-height: 200vh;
+            column-gap: 1%;
+            row-gap: 1%;
+            margin-top: 1%;
+            grid-area: main;
+            overflow-y: scroll;
+            overflow-x: hidden;
+            display: grid;
+            grid-template-columns: repeat(7, 1fr);
+            grid-template-rows: 10vh auto;
+            grid-template-areas: ". mainBanner mainBanner mainBanner mainBanner mainBanner rightBanner""leftBanner mainContent1 mainContent1 mainContent1 secondaryContent1 secondaryContent1 rightBanner""leftBanner mainContent1 mainContent1 mainContent1 tertiaryContent1 tertiaryContent2 rightBanner""leftBanner mainContent1 mainContent1 mainContent1 secondaryContent2 secondaryContent2 rightAd1""leftBanner middleSection middleSection middleSection middleSection middleSection middleSection""leftBanner middleSection middleSection middleSection middleSection middleSection middleSection""leftBanner mainContent2 mainContent2 mainContent2 coulmn1 coulmn2 rightAd2""leftBanner mainContent2 mainContent2 mainContent2 coulmn1 coulmn2 rightAd3";
+        }
+        
+        .contentSection {
+            background-color: #61797b;
+            border-radius: 5%;
+        }
+        
+        #mainBanner {
+            grid-area: mainBanner;
+            border-radius: 15px;
+        }
+        
+        #mainBanner>a>img {
+            height: 100%;
+            width: 100%;
+        }
+        
+        #leftBanner {
+            grid-area: leftBanner;
+            border-radius: 15px;
+        }
+        
+        #rightBanner {
+            grid-area: rightBanner;
+        }
+        
+        #mainContent1 {
+            grid-area: mainContent1;
+        }
+        
+        #secondaryContent1 {
+            grid-area: secondaryContent1;
+        }
+        
+        #tertiaryContent1 {
+            grid-area: tertiaryContent1;
+        }
+        
+        #rightAd1 {
+            grid-area: rightAd1;
+        }
+        
+        #rightAd2 {
+            grid-area: rightAd2;
+        }
+        
+        #rightAd3 {
+            grid-area: rightAd3;
+        }
+        
+        #mainContent2 {
+            grid-area: mainContent2;
+        }
+        
+        #secondaryContent2 {
+            grid-area: secondaryContent2;
+        }
+        
+        #tertiaryContent2 {
+            grid-area: tertiaryContent2;
+        }
+        
+        #coulmn1 {
+            grid-area: coulmn1;
+        }
+        
+        #coulmn2 {
+            grid-area: coulmn2;
+        }
+        
+        #middleSection {
+            grid-area: middleSection;
+        }
+        /* footer styles */
+        
+        footer {
+            grid-area: footer;
+            height: 10vh;
+            width: 100vw;
+            background-color: #404946ee;
+            position: fixed;
+            z-index: 100;
+            top: 90%;
+            transform: scaleY(.45) translateY(60%);
+        }
+        
+        .atBottom {
+            position: inherit;
+            z-index: inherit;
+            top: inherit;
+            transform: unset;
+        }
+        
+        @media (min-width: 900px) {
+            #topnav {
+                display: none !important;
+            }
+        }
+        
+        @media only screen and (max-width: 900px) {
+            main {
+                grid-template-columns: repeat(5, 1fr);
+                grid-template-rows: 5vh auto;
+                grid-template-areas: ". mainBanner mainBanner mainBanner rightBanner""leftBanner mainContent1 mainContent1 secondaryContent1 rightBanner""leftBanner mainContent1 mainContent1 tertiaryContent1 rightBanner""leftBanner mainContent1 mainContent1 tertiaryContent2 rightBanner""leftBanner mainContent1 mainContent1 secondaryContent2 rightAd1""leftBanner middleSection middleSection middleSection middleSection""leftBanner middleSection middleSection middleSection middleSection""leftBanner mainContent2 mainContent2  coulmn1 rightAd2""leftBanner mainContent2 mainContent2 coulmn1  rightAd2""leftBanner mainContent2 mainContent2 coulmn2 rightAd3""leftBanner mainContent2 mainContent2 coulmn2 rightAd3";
+            }
+            header>section:nth-of-type(2) {
+                width: 70vw;
+            }
+            header>section:nth-of-type(3) {
+                display: none;
+            }
+            header>section:nth-of-type(4) {
+                width: 22.5vw;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                flex-direction: column;
+                overflow: hidden;
+            }
+        }
+        
+        @media only screen and (max-width: 500px) {
+            main {
+                grid-template-columns: repeat(3, 1fr);
+                grid-template-rows: 5vh auto;
+                grid-template-areas: ". mainBanner mainBanner""leftBanner mainContent1 mainContent1""leftBanner mainContent1  mainContent1""leftBanner secondaryContent1  tertiaryContent1""leftBanner secondaryContent1 tertiaryContent2""leftBanner secondaryContent2 secondaryContent2""rightAd1 middleSection middleSection""rightAd2 middleSection middleSection ""rightAd3 mainContent2 mainContent2""rightBanner mainContent2 mainContent2""rightBanner coulmn1 coulmn2""rightBanner coulmn1 coulmn2";
+            }
+        }
