--- a/F22/Advanced-Interface-using-CSS-COMP2081/Assignment1/stylesheets/index.css
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/Assignment1/stylesheets/index.css
@@ -175,6 +175,11 @@
             align-items: center;
         }
         
+        section>img {
+            width: 100%;
+            height: 100%;
+        }
+        
         #mainContent1>article>img {
             max-width: 60%;
             height: 60%;
