--- a/F22/Advanced-Interface-using-CSS-COMP2081/Week5/lab5/css/custom.css
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/Week5/lab5/css/custom.css
@@ -1,24 +1,49 @@
 /* Custom CSS */
+
+
 /* STEP 12: Using your browser's DOM Inspector, figure out how the default .carousel-caption is positioned with CSS, and change it */
+
+
 /* .carousel-caption {
 	bottom: 0;
 	padding-bottom: 0;
 } */
 
+
 /* STEP 13: View the result in the browser, then head back to index.html */
+
+
 /* The below class and animation keyframes are used by the JavaScript */
+
 .zoomit {
-	animation: zoom-in-out .5s;
+    animation: zoom-in-out 1.5s;
 }
+
 @keyframes zoom-in-out {
-	from {
-		transform: none;
-	}
-	50% {
-		transform: scale(1.4);
-		transform-origin: center top;
-	}
-	to {
-		transform: none;
-	}
+    from {
+        transform: none;
+    }
+    50% {
+        transform: scale(1.4);
+        transform-origin: center top;
+    }
+    to {
+        transform: none;
+    }
+}
+
+
+/*  Lab step 2 */
+
+.carousel-caption {
+    top: 60% !important;
+}
+
+
+/* Lab step 3*/
+
+.carousel-control-next,
+.carousel-control-prev {
+    align-items: flex-start;
+    margin-top: 5vh;
 }
