--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/css/main.css
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/css/main.css
@@ -236,6 +236,15 @@ https://www.phpied.com/delay-loading-your-print-css/
     }
     
     html {
+        height: 100%;
+        overflow: auto;
+    }
+    
+    body {
+        height: 100%;
+    }
+    
+    html {
         min-width: 320px;
     }
     
@@ -298,7 +307,6 @@ https://www.phpied.com/delay-loading-your-print-css/
     }
     
     main>section>section {
-        border: red 2px solid;
         margin-bottom: 5vh;
     }
     
@@ -454,12 +462,11 @@ https://www.phpied.com/delay-loading-your-print-css/
     
     #bookInfo .nav-link {
         border-radius: 10% / 50%;
-        background-color: RGBA(200, 200, 200, 0.4);
+        background-color: RGBA(200, 200, 200, 0.6);
         color: hsl(0, 8%, 12%);
     }
     
     #bookInfo .nav-link.active {
-        background-color: RGBA(200, 200, 200, 0.4);
         background-color: #ffffffa8 !important;
     }
     
@@ -491,7 +498,7 @@ https://www.phpied.com/delay-loading-your-print-css/
     }
     
     #reviewsInfo {
-        background-color: RGBA(200, 200, 200, 0.4)
+        background-color: RGBA(200, 200, 200, 0.5)
     }
     
     #productDetails.show {
@@ -533,16 +540,17 @@ https://www.phpied.com/delay-loading-your-print-css/
     
     #about>aside>section>a>img,
     #about>article:nth-child(2)>aside>section>a>img {
-        background-color: RGBA(200, 200, 200, 0.5);
+        background-color: RGBA(200, 200, 200, 0.85);
         border-radius: 15% / 25%;
         max-width: 125px;
         min-width: 80px;
     }
     
-    #about>aside>section>a>img:hover {
+    #about>aside>section>a>img:hover,
+    #about>article:nth-child(2)>aside>section>a>img:hover {
         scale: 1.1;
         border: #333 1px solid;
-        background-color: RGBA(200, 200, 200, 0.6);
+        background-color: RGBA(200, 200, 200, 1);
     }
     
     aside.buyLinks>h4 {
@@ -615,7 +623,43 @@ https://www.phpied.com/delay-loading-your-print-css/
         padding-bottom: 0;
     }
     
+    #mediaReactions>article {
+        display: flex;
+        gap: 3%;
+        border-bottom: #333 solid 1px;
+        margin-bottom: 2vh;
+        align-items: center;
+    }
+    
+    #mediaReactions>article>h5 {
+        min-width: 30%;
+        height: 100%;
+        border-right: 1px solid black;
+        padding-right: 10px;
+    }
+    
+    #tabContentExcerpt {
+        width: 75%;
+        justify-content: center;
+    }
+    
+    #excerpt>div {
+        justify-content: space-between;
+    }
+    
+    #tabContentExcerpt {
+        margin-right: 7.5%;
+    }
+    
     @media (max-width: 768px) {
+        #tabButtonsExcerpt {
+            flex-direction: row !important;
+            justify-content: space-evenly;
+        }
+        #excerpt>div {
+            flex-direction: column !important;
+            align-items: center !important;
+        }
         header>nav>.show {
             background-color: RGBA(255, 255, 255, 0.75);
             min-width: fit-content;
@@ -663,6 +707,9 @@ https://www.phpied.com/delay-loading-your-print-css/
     }
     
     @media (max-width: 410px) {
+        #about>article:nth-child(2)>div:nth-child(1) {
+            margin-right: 12.5%;
+        }
         #about>aside>section>a>img {
             max-width: 90px;
         }
