--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/css/main.css
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/css/main.css
@@ -333,11 +333,13 @@ header>nav>a>img:hover {
 
 .nav-link {
     transition: 0.1s;
+    color: #a42117;
 }
 
 .nav-link:hover {
     text-decoration: underline;
     scale: 1.05;
+    color: #c63022;
 }
 
 main>section>section {
@@ -411,11 +413,43 @@ div.carousel-item:nth-child(1)>div:nth-child(2)>h5:nth-child(1) {
 #about>article>figure {
     font-weight: bold;
     color: #140D0F;
-    background-color: RGBA(200, 200, 200, 0.7);
+    background-color: #01448880;
     height: fit-content;
     padding: 1vmin;
     border-radius: 50px;
     text-align: center;
+}
+
+#about>figure>div,
+#about>article>figure>div,
+.inset-Readable,
+#mediaReactions>article>p,
+#authorAcordion>section>section>section>div {
+    width: 80%;
+    background-color: rgba(242, 238, 202, 0.733);
+    margin: 2vh 0 2vh 10%;
+    padding: 2vmin;
+    padding-left: 3vmin;
+    padding-right: 3vmin;
+    border-radius: 5%;
+}
+
+#authorAcordion>section>section>section>div {
+    width: 90%;
+    margin: 2vh 0 2vh 5%;
+}
+
+#mediaReactions>article>p {
+    margin-left: 0;
+    border-radius: 60px;
+    margin-right: 2vw;
+}
+
+#mediaReactions>article>div>h5 {
+    font-weight: bold;
+    background-color: rgba(242, 238, 202, 0.404);
+    border-radius: 50px;
+    padding: 1.5vmin;
 }
 
 #about>article>div :is(h2,
@@ -434,7 +468,7 @@ h4) {
     display: flex;
     flex-direction: column;
     margin-top: 2.5vh;
-    background-color: RGBA(200, 200, 200, 0.5);
+    background-color: rgba(242, 238, 202, 0.2);
     width: fit-content;
 }
 
@@ -475,7 +509,7 @@ main>nav {
 }
 
 main>nav>ul>li {
-    background-color: RGBA(200, 200, 200, 0.4);
+    background-color: #01448830;
     text-align: center;
     border-radius: 10% / 25%;
 }
@@ -496,8 +530,13 @@ main>nav>ul>li {
 
 #bookInfo .nav-link {
     border-radius: 10% / 50%;
-    background-color: RGBA(200, 200, 200, 0.6);
-    color: hsl(0, 8%, 12%);
+    background-color: rgba(242, 238, 202, 0.6);
+    color: #a42117;
+    font-weight: bold;
+}
+
+#bookInfo .nav-link:hover {
+    color: #c63022;
 }
 
 #bookInfo .nav-link.active {
@@ -531,8 +570,20 @@ main>nav>ul>li {
     padding: var(--bs-accordion-body-padding-y) 0;
 }
 
-#reviewsInfo {
-    background-color: RGBA(200, 200, 200, 0.5)
+#reviewsButton,
+#reviewsButton>button,
+#authorAcordion>section>h2,
+#authorAcordion>section>h2>button {
+    background-color: rgba(200, 200, 200, 0.3);
+}
+
+{
+    background-color: rgba(242, 238, 202, 0.6);
+}
+
+#reviewsInfo,
+#authorAcordion>.accordion-item {
+    background-color: #01448830;
 }
 
 #productDetails.show {
@@ -544,8 +595,8 @@ main>nav>ul>li {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    gap: 2vw;
-    column-gap: 3vh;
+    gap: 3vw;
+    column-gap: 4vh;
 }
 
 #ebook,
@@ -574,7 +625,7 @@ main>nav>ul>li {
 
 #about>aside>section>a>img,
 #about>article:nth-child(2)>aside>section>a>img {
-    background-color: RGBA(200, 200, 200, 0.85);
+    background-color: rgba(242, 238, 202, 0.75);
     border-radius: 15% / 25%;
     max-width: 125px;
     min-width: 80px;
@@ -584,22 +635,18 @@ main>nav>ul>li {
 #about>article:nth-child(2)>aside>section>a>img:hover {
     scale: 1.1;
     border: #333 1px solid;
-    background-color: RGBA(200, 200, 200, 1);
+    background-color: rgba(242, 238, 202, 1);
 }
 
-aside.buyLinks>h4 {
-    background-color: RGBA(200, 200, 200, 0.4);
+aside.buyLinks {
     border-radius: 10% / 40%;
     padding: 0% 1%;
     font-weight: bold;
     align-self: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
     width: fit-content;
 }
-
-aside.buyLinks:nth-child(2) {}
 
 #authorInformation {
     display: grid;
@@ -651,7 +698,7 @@ div>h5~ul {
     gap: .5vw;
     column-gap: 3vh;
     justify-content: space-evenly;
-    background-color: RGBA(200, 200, 200, 0.7);
+    background-color: rgba(242, 238, 202, 0.733);
     border-radius: 20%/20%;
     padding: 1% 0%;
 }
@@ -680,7 +727,7 @@ div>h5~ul {
     align-items: center;
 }
 
-#mediaReactions>article>h5 {
+#mediaReactions>article>div {
     min-width: 30%;
     height: 100%;
     border-right: 1px solid black;
@@ -711,8 +758,19 @@ div>h5~ul {
 #topSelect,
 #bottomSelect {
     align-self: center;
-    margin-bottom: 2.5vh;
     width: fit-content;
+    background-color: rgba(200, 200, 200, 0.75);
+    margin-bottom: 5vh;
+}
+
+#topSelect>option,
+#bottomSelect>option {
+    background-color: rgba(200, 200, 200, 0.75);
+}
+
+#topSelect>option:hover,
+#bottomSelect>option:hover {
+    background-color: rgba(200, 200, 200, 1);
 }
 
 .carousel-inner {
@@ -733,7 +791,7 @@ div>h5~ul {
         align-items: center !important;
     }
     header>nav>.show {
-        background-color: RGBA(255, 255, 255, 0.75);
+        background-color: rgba(242, 238, 202, 0.733);
         min-width: fit-content;
         max-width: 30%;
         flex-basis: 100vw;
@@ -839,6 +897,7 @@ div>h5~ul {
     }
     #about>figure {
         display: block;
+        margin-top: 7.5vh;
     }
     #about>article {
         align-self: center;
@@ -885,16 +944,4 @@ div>h5~ul {
     background-image: -webkit-linear-gradient(315deg, transparent 47%, #f0f0f0 48%, #fff 55%, #f6f6f6);
     background-image: linear-gradient(230deg, transparent 47%, #f0f0f0 48%, #fff 55%, #f6f6f6);
     box-shadow: 6px 6px 9px -4px hsla(0, 13%, 82%, .53);
-}
-
-background-image: linear-gradient(230deg,
-transparent 47%,
-#f0f0f0 48%,
-#fff 55%,
-#f6f6f6);
-box-shadow: 6px 6px 9px -4px hsla(0,
-13%,
-82%,
-.53);
-
 }
